ves-middle/tests/t2_test_variables_must_be_defined.test
let global = "ok"

{
    mut local = "ok"
    local = "ok"
    
    print(global, local, "ok")
}

print(global, "ok")
print(local, "error")
print(undefined, "error")

print(f())
print(S())

fn f() {}
struct S

%output

error: Undefined variable `local`
   ┌─ <source: #5670686dff123f31>:11:7
   │
11 │ print(local, "error")
   │       ^^^^^

error: Undefined variable `undefined`
   ┌─ <source: #5670686dff123f31>:12:7
   │
12 │ print(undefined, "error")
   │       ^^^^^^^^^

error: Attempted to use the function `f` before its declaration
   ┌─ <source: #5670686dff123f31>:14:7
   │
14 │ print(f())
   │       ^
   ·
17 │ fn f() {}
   │    - First declared on line 17

error: Attempted to use the struct `S` before its declaration
   ┌─ <source: #5670686dff123f31>:15:7
   │
15 │ print(S())
   │       ^
   ·
18 │ struct S
   │        - First declared on line 18
